--- a/app/src/main/res/layout/activity_split_bill.xml
+++ b/app/src/main/res/layout/activity_split_bill.xml
@@ -6,4 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".activities.SplitBillActivity">
 
+    <ImageView
+        android:id="@+id/imagePie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:src="@drawable/pie_diagram"
+        app:layout_constraintBottom_toTopOf="@+id/buttonDownload"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <Button
+        android:id="@+id/buttonDownload"
+
+        android:onClick="showDownload"
+        android:layout_width="265dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="104dp"
+        android:text="Download PDF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
