--- a/app/src/main/res/layout/activity_pay_bills.xml
+++ b/app/src/main/res/layout/activity_pay_bills.xml
@@ -6,4 +6,147 @@
     android:layout_height="match_parent"
     tools:context=".activities.PayBillsActivity">
 
+    <TextView
+        android:id="@+id/select_bill_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select bill"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:textColor="@color/black"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <LinearLayout
+        android:id="@+id/bill_1"
+        android:layout_marginTop="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/blue_background"
+        android:orientation="vertical"
+        android:onClick="payBill"
+        app:layout_constraintTop_toBottomOf="@id/select_bill_text"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bill 1"
+            android:textSize="30sp"
+            android:textColor="@color/black"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Jan 2, 2021"
+            android:textSize="20sp"
+            android:textColor="@color/grey"
+            android:layout_marginStart="250dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/bill_2"
+        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/blue_background"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/bill_1"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bill 2"
+            android:textSize="30sp"
+            android:textColor="@color/black"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Jan 5, 2021"
+            android:textSize="20sp"
+            android:textColor="@color/grey"
+            android:layout_marginStart="250dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/bill_3"
+        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/blue_background"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/bill_2"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bill 3"
+            android:textSize="30sp"
+            android:textColor="@color/black"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Jan 9, 2021"
+            android:textSize="20sp"
+            android:textColor="@color/grey"
+            android:layout_marginStart="250dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/bill_4"
+        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/blue_background"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/bill_3"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bill 4"
+            android:textSize="30sp"
+            android:textColor="@color/black"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Jan 10, 2021"
+            android:textSize="20sp"
+            android:textColor="@color/grey"
+            android:layout_marginStart="250dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
