--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="red">#FF0000</color>
     <color name="grey">#8A8A8A</color>
     <color name="green">#00FF00</color>
+    <color name="blue_background">#e6ffff</color>
 
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
