adaugare noi functii_update_cateva_functii

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,37 +10,38 @@
         android:id="@+id/user_logo"
         android:layout_width="wrap_content"
         android:layout_height="120dp"
+        android:layout_marginStart="8dp"
         android:src="@drawable/user_icon"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/username"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2" />
 
     <TextView
         android:id="@+id/username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="170dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="168dp"
         android:text="@string/username"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-         />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/usernameText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="80dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginEnd="80dp"
         android:text=""
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username" />
 
     <TextView
@@ -60,8 +61,8 @@
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="170dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="16dp"
         android:text="@string/passwordText"
         android:textColor="@color/black"
         android:textSize="24sp"
@@ -72,14 +73,15 @@
         android:id="@+id/passwordText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="80dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginEnd="80dp"
         android:text=""
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <TextView
@@ -95,24 +97,25 @@
         app:layout_constraintTop_toBottomOf="@+id/passwordText"
         app:layout_constraintBottom_toTopOf="@id/submitButton"/>
 
+
     <Button
         android:id="@+id/submitButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
+        android:layout_marginTop="44dp"
         android:layout_marginEnd="150dp"
-        android:layout_marginTop="52dp"
-        android:text="Sign In"
-        android:shadowColor="@color/black"
-        android:outlineAmbientShadowColor="@color/black"
-        android:textColor="@color/black"
         android:backgroundTint="#C6C6C6"
-        android:textAllCaps="false"
         android:gravity="center"
+        android:outlineAmbientShadowColor="@color/black"
+        android:shadowColor="@color/black"
+        android:text="Sign In"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/passwordText" />
-
 
     <TextView
         android:id="@+id/loginInfoLabel"
@@ -127,15 +130,15 @@
         app:layout_constraintTop_toBottomOf="@+id/submitButton"
         app:layout_constraintBottom_toTopOf="@id/facebook_logo"
         />
-    
+
     <ImageView
         android:id="@+id/facebook_logo"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="36dp"
         android:src="@drawable/facebook_logo"
         app:layout_constraintTop_toBottomOf="@id/submitButton"
-        />
+        tools:layout_editor_absoluteX="22dp" />
 
     <ImageView
         android:id="@+id/google_logo"
