--- a/app/src/main/res/layout/activity_control_parental.xml
+++ b/app/src/main/res/layout/activity_control_parental.xml
@@ -34,8 +34,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:text="Password"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
